--- a/client/index.html
+++ b/client/index.html
@@ -7,9 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- font awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
+<!-- bootstrap -->
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+			crossorigin="anonymous"
+		/>
 
-
-  <title>Vite + React</title>
+  <title>Task Manager</title>
 </head>
 
 <body>
